@@ -8,6 +8,8 @@
 
 @cindex parameters in python
 @cindex python parameters
+@documentencoding UTF-8
+@documentlanguage en
 @tindex gdb.Parameter
 @tindex Parameter
 You can implement new @value{GDBN} parameters using Python.
