@@ -8,6 +8,8 @@
 
 @cindex PARAMETERS IN PYTHON
 @cindex PYTHON PARAMETERS
+@documentencoding UTF-8
+@documentlanguage EN
 @tindex GDB.PARAMETER
 @tindex PARAMETER
 YOU CAN IMPLEMENT NEW @value{GDBN} PARAMETERS USING PYTHON.
