@@ -9,6 +9,10 @@ __   __/ _ \|___  | ___|
  \ V /| |_| | / /  ___) |
   \_/  \___(_)_/  |____/          (unreleased)
 
+TexInfo:
+ * Partial support of @documentencoding (hardcoded to the english value) and
+   @documentlanguage (to be manually translated by the humans in the PO file)
+   (GitHub's #597 and #598) [Fat-Zer, vindicatorr and mquinson]
 
 =======================================================================
         ___  _____ _  _
